# ultimate_ladder_ynh

./: README.md  manifest.toml  pyproject.toml  requirements.txt
conf/: requirements.txt  settings.py  ultimate-ladder.service  urls.py
scripts/: _common.sh  config  install  upgrade
ultimate_ladder/: admin.py  apps.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
ultimate_ladder/migrations/: 0001_initial.py
ultimate_ladder/static/ultimate_ladder/: style.css
ultimate_ladder/templates/ultimate_ladder/: base.html  edit_league.html  edit_player.html  game.html  game_confirm_delete.html  index.html  league.html  league_confirm_delete.html  leagues.html  new_game.html  player.html  player_confirm_delete.html  players.html
